[gd_scene load_steps=5 format=3 uid="uid://c6v2fkwk03kpo"]

[ext_resource type="Script" uid="uid://cj8x2dvmayegx" path="res://Scripts/player_self.gd" id="1_80hld"]
[ext_resource type="PackedScene" uid="uid://bdriym0k3hk1g" path="res://Scenes/EntityModel/PlayerEntity.tscn" id="2_80hld"]

[sub_resource type="CircleShape2D" id="CircleShape2D_80hld"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gubx5"]

[node name="PlayerSelf" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
z_index = 1
motion_mode = 1
script = ExtResource("1_80hld")
sprite = NodePath("PlayerEntity")
speed = null

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_enabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_80hld")

[node name="PlayerEntity" parent="." instance=ExtResource("2_80hld")]
_inventory = null
anim_state = null
_tool_state = null
max_health = null
health = null

[node name="PickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_gubx5")

[connection signal="area_entered" from="PickupArea" to="." method="_on_pickup_area_area_entered"]
